# DJStingrayTracer

./: CMakeLists.txt  README.md
source/: camera.hpp  colour.hpp  hittable.hpp  hittablelist.hpp  main.cpp  material.hpp  randomworldgenerator.hpp  ray.hpp  sphere.hpp  utils.hpp  vec3.hpp
world_data/: basic_world.json  wide_angle_world.json
